@@ -1,6 +1,6 @@
 // <forward_list.h> -*- C++ -*-
 
-// Copyright (C) 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
+// Copyright (C) 2008, 2009, 2010, 2011, 2012 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -606,8 +606,8 @@ _GLIBCXX_BEGIN_NAMESPACE_CONTAINER
        *  in the range [@a __first,@a __last).
        *
        *  Note that the assignment completely changes the %forward_list and
-       *  that the resulting %forward_list's size is the same as the number
-       *  of elements assigned.  Old data may be lost.
+       *  that the number of elements of the resulting %forward_list's is the
+       *  same as the number of elements assigned.  Old data is lost.
        */
       template<typename _InputIterator>
         void
@@ -622,10 +622,10 @@ _GLIBCXX_BEGIN_NAMESPACE_CONTAINER
        *  @param  __n  Number of elements to be assigned.
        *  @param  __val  Value to be assigned.
        *
-       *  This function fills a %forward_list with @a __n copies of the given
-       *  value.  Note that the assignment completely changes the
-       *  %forward_list and that the resulting %forward_list's size is the
-       *  same as the number of elements assigned.  Old data may be lost.
+       *  This function fills a %forward_list with @a __n copies of the
+       *  given value.  Note that the assignment completely changes the
+       *  %forward_list, and that the resulting %forward_list has __n
+       *  elements.  Old data is lost.
        */
       void
       assign(size_type __n, const _Tp& __val)
@@ -744,7 +744,7 @@ _GLIBCXX_BEGIN_NAMESPACE_CONTAINER
       { return this->_M_impl._M_head._M_next == 0; }
 
       /**
-       *  Returns the largest possible size of %forward_list.
+       *  Returns the largest possible number of elements of %forward_list.
        */
       size_type
       max_size() const noexcept
@@ -997,9 +997,9 @@ _GLIBCXX_BEGIN_NAMESPACE_CONTAINER
        *
        *  This function will %resize the %forward_list to the specified
        *  number of elements.  If the number is smaller than the
-       *  %forward_list's current size the %forward_list is truncated,
-       *  otherwise the %forward_list is extended and the new elements
-       *  are default constructed.
+       *  %forward_list's current number of elements the %forward_list
+       *  is truncated, otherwise the %forward_list is extended and the
+       *  new elements are default constructed.
        */
       void
       resize(size_type __sz);
@@ -1012,9 +1012,9 @@ _GLIBCXX_BEGIN_NAMESPACE_CONTAINER
        *
        *  This function will %resize the %forward_list to the specified
        *  number of elements.  If the number is smaller than the
-       *  %forward_list's current size the %forward_list is truncated,
-       *  otherwise the %forward_list is extended and new elements are
-       *  populated with given data.
+       *  %forward_list's current number of elements the %forward_list
+       *  is truncated, otherwise the %forward_list is extended and new
+       *  elements are populated with given data.
        */
       void
       resize(size_type __sz, const value_type& __val);
@@ -1240,11 +1240,11 @@ _GLIBCXX_BEGIN_NAMESPACE_CONTAINER
    *  @brief  Forward list equality comparison.
    *  @param  __lx  A %forward_list
    *  @param  __ly  A %forward_list of the same type as @a __lx.
-   *  @return  True iff the size and elements of the forward lists are equal.
+   *  @return  True iff the elements of the forward lists are equal.
    *
-   *  This is an equivalence relation.  It is linear in the size of the
-   *  forward lists.  Deques are considered equivalent if corresponding
-   *  elements compare equal.
+   *  This is an equivalence relation.  It is linear in the number of 
+   *  elements of the forward lists.  Deques are considered equivalent
+   *  if corresponding elements compare equal.
    */
   template<typename _Tp, typename _Alloc>
     bool
@@ -1257,8 +1257,9 @@ _GLIBCXX_BEGIN_NAMESPACE_CONTAINER
    *  @param  __ly  A %forward_list of the same type as @a __lx.
    *  @return  True iff @a __lx is lexicographically less than @a __ly.
    *
-   *  This is a total ordering relation.  It is linear in the size of the
-   *  forward lists.  The elements must be comparable with @c <.
+   *  This is a total ordering relation.  It is linear in the number of 
+   *  elements of the forward lists.  The elements must be comparable
+   *  with @c <.
    *
    *  See std::lexicographical_compare() for how the determination is made.
    */
